Source/WebCore/editing/TextIteratorBehavior.h
@@ -57,6 +57,8 @@ enum TextIteratorBehaviorFlag {
     // Makes visiblity test take into account the visibility of the frame.
     // FIXME: This should probably be always on unless TextIteratorIgnoresStyleVisibility is set.
     TextIteratorClipsToFrameAncestors = 1 << 8,
+
+    TextIteratorTraversesFlatTree = 1 << 9,
 };
 
 typedef unsigned short TextIteratorBehavior;
